--- a/Exercice_4.html
+++ b/Exercice_4.html
@@ -12,4 +12,5 @@
             <button  name="valider" id="valider">Valider</button>
         </form>
     </body>
+    <script src="Exercice_4.js>
 </html>
