--- a/Exercice_5.html
+++ b/Exercice_5.html
@@ -11,4 +11,5 @@
             <button  id="valider" name ="valider">Valider</button>
         </form>
     </body>
+    <script src="Exercice_5.js"></script>
 </html>
