--- a/Exercice_7.html
+++ b/Exercice_7.html
@@ -11,4 +11,5 @@
             <button id="valider" name="valider">Valider</button>
         </form>
     </body>
+    <script src="Exercice_7.js"></script>
 </html>
