--- a/Exercice_8.html
+++ b/Exercice_8.html
@@ -10,5 +10,5 @@
             <button id="valider" name="valider">Valider</button>
         </form>
     </body>
-    <script src="Exercice_8.js>
+    <script src="Exercice_8.js"></script>
 </html>
